Fixes hidden/visible toggle mismatch

--- a/src/sass/component/_hero.scss
+++ b/src/sass/component/_hero.scss
@@ -137,7 +137,7 @@
   z-index:2;
 }
 
-@include mq( 'small' , '+' )
+@include mq( 'large' , '+' )
 {
   .c-hero__video__content {
     position: absolute;
